dev/src/css/main.css
* {
    font-family: 'IBM Plex Sans', sans-serif;
    color: #fff;
    user-select: none;
}

a {
    text-decoration: none;
}

#backgroundImage {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background: linear-gradient(#000, #202020);
    z-index: -5;
}

#navigation {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    background: linear-gradient(45deg, #000, #986f0f);
    z-index: 5;
}

.navItem {
    margin: 0 8px;
    transition: .1s;
    cursor: pointer;
}

#navImg {
    width: 50px;
    transition: 0s;
}

.navItem:hover {
    filter: brightness(10);
    box-shadow: 0 0.5px #fff5;
}

#carousel {
    margin: -8px;
    top: 62px;
    position: absolute;
    overflow: hidden;
}

.labImg {
    position: fixed;
    filter: blur(5px);
    transition: .8s;
    z-index: -4;
}

.labImg:hover {
    transform: scale(1.2);
}

.labLabel {
    position: fixed;
    top: 0;
    right: 0;
    height: 100%;
    width: 100%;
    padding: 24px;
    display: flex;
    background: #0008;
    flex-direction: column;
    justify-content: center;
    z-index: 4;
    align-items: center;
}

.lab-header {
    font-size: 64px;
    font-weight: 800;
}

.lab-desc {
    color: #fff8;
}

#carousel {
    overflow: hidden;
}

